assets/css/style.css
/* Google font */
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Ysabeau+SC:wght@1..1000&display=swap');

/* Generic style */
* {
    margin:     0;
    padding:    0;
    box-sizing: border-box;
}

.title_ubuntu {
    font-family: "Ubuntu", sans-serif;
    margin: 15px 20px;
    color: #ffffff;
    text-shadow: 2px 2px 5px #323232;
    font-size: 3.3rem;
    text-align: center;
    
}

.text_ysabeau {
    font-family: "Ysabeau", sans-serif;
    color: #cbd5e3;
    font-size: 16px;
}

.section_padding {
    padding: 35px 20px;
}


h1, h2, h3 {
    margin: 0;
    padding: 0;
    font-size: 22px;
}

button {
    margin: 8px 0;
}

body {
    font-family: "Ysabeau";
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #323232;
}

header {
    background-color:   lightgray;
    padding: 0 3px;
    background-color: #000000;
    padding: 0 1rem; 
    position: fixed;
    z-index: 99;
    box-shadow: 0 2px 4px #323232;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    vertical-align: middle;
    height: 45px;
    
}

nav {
    position: absolute;
    background-color: black;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 3px #323232;
    display: none;
    top: 100%;
}

.logo {
    width: 32px;
}

header img {
    display: block;
    margin: auto;
    border-radius: 50%;
}

header > h1 {
    font-family: "Ubuntu";
    margin: auto 0;
    color: #cbd5e3;

}

header > a {
    text-decoration: none;
    margin: auto 0;

}

#nav-dropdown:checked~nav {
    display: block;
}

#nav-dropdown {
    display: none;
}

.nav-dropdown-label {
    margin: auto 0;
}

nav a {
    font-family: "Ubuntu";
    text-decoration: none;
    color: #cbd5e3;
}

nav li {
    list-style-type: none;
    margin-bottom: 5px;
}

#nav_register_link {
    display: flex;
    justify-content: center;
    align-items: center;
}

#nav_register_btn {
    padding: 5px;
}

main {
    background-color: darkgray;
    
}

#section_title {
    margin-top:             45px;
    height:                 95vh;
    padding-top:            55px;
    background-image:       url("../img/festival02.jpg");
    background-position:    center;
    background-size:        cover;
    
}

#section_title_facts {
    display:            flex;
    justify-content:    space-evenly;
    background-color: black;

}

#section_facts_when {
    margin-right:   8px;
    margin-left:    10px;
    text-align:     right;

}

#section_facts_where {
    margin-left:    8px;
    text-align:     left;
}

#where, #when {
    font-size: 0.75rem;
}

#section_video {
    background-color: black;
}

#section_gallery {
    display: grid;
    grid-template-columns: 2fr 1fr 1fr 1fr 2fr;


}

#section_gallery img {
    width: 100%;
    height: 100%;
}




footer {
    background-color: lightgray;
    padding:            4%;
}

#social-media {
    list-style-type:    none;
    display:            flex;
    justify-content:    space-evenly;
    text-align:         center;

}

#social-media li {
    font-size: 22px;
}

#social-media a {
    text-decoration: none;
    color: inherit;
}



/* Media query: tablets from 768px */
@media screen and (min-width: 768px) {
    nav {
        display: flex;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 5px;
        background-color: #000000;
        top: 0;
        height: 100%;
    }

    button {
       vertical-align: middle;
       margin-left: 15px;
       padding-left: 8px;
       padding-right: 8px;

       
    }

    #menu {
        display: flex;
    }

    #menu > li {
        padding-left: 1rem;
        margin: auto 0;
    }

    .nav-dropdown-label {
        display: none;
    }
}

@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #cbd5e3;
    }
    
    #social-media a:hover {
        border-bottom: 1px solid #323232;
    }
}

